--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,6 +62,12 @@ jobs:
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: npm i --ignore-scripts
 
+      - name: Install node-sass
+        run: nodejs node_modules/node-sass/scripts/install.js
+      
+      - name: Rebuild node-sass
+        run: npm rebuild node-sass
+
       - name: Test
         run: npm run test
 
