--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "co-hire",
-  "name": "co-hire Front End Challenge",
+  "short_name": "movies-app",
+  "name": "movies-app",
   "icons": [
     {
       "src": "favicon.ico",
