--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "use-debounce": "^7.0.1"
   },
   "scripts": {
     "test": "react-scripts test",
