Added app title configuration to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+REACT_APP_TITLE=Movies App
 REACT_APP_IMAGES_URL=https://image.tmdb.org/t/p/w220_and_h330_face
 REACT_APP_API_URL=https://api.themoviedb.org/3
 REACT_APP_API_KEY=
