--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
     "axios": "^0.21.1",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
