--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/react-hooks": "^7.0.2",
     "axios": "^0.21.1",
+    "axios-mock-adapter": "^1.20.0",
+    "history": "^5.2.0",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {
+    "restoreMocks": true
   }
 }
