--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react-hooks": "^7.0.2",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.20.0",
+    "cypress": "^9.2.0",
     "history": "^5.2.0",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
