--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,3 +79,85 @@ jobs:
         with:
           name: build
           path: build
+
+  install_cypress:
+    name: Install Cypress
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout git repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      
+      - name: Set up node 
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      
+      - name: Cache Cypress binary
+        id: cache-cypress-dependency
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-${{ runner.os }}-${{ hashFiles('package.json') }}
+          restore-keys: |
+            cypress-${{ runner.os }}-${{ hashFiles('package.json') }}
+      
+      - name: Cypress install
+        if: steps.cache-cypress-dependency.outputs.cache-hit != 'true'
+        run: npx cypress install
+
+  run_cypress:
+    needs: [build, install_cypress]
+    name: End-to-end tests
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Checkout git repository
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Set up node 
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: build
+          path: build
+
+      - name: Cache dependencies
+        id: cache-dependencies
+        uses: actions/cache@v2
+        with:
+          path: ./node_modules
+          key: modules-${{ hashFiles('package-lock.json') }}
+      
+      - name: Install dependencies
+        if: steps.cache-dependencies.outputs.cache-hit != 'true'
+        run: npm i --ignore-scripts
+      
+      - name: Start server
+        run: npm run start
+      
+      - name: Cache Cypress binary
+        id: cache-cypress-dependency
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/Cypress
+          key: cypress-${{ runner.os }}-${{ hashFiles('package.json') }}
+          restore-keys: |
+            cypress-${{ runner.os }}-${{ hashFiles('package.json') }}
+    
+      - name: Cypress install
+        if: steps.cache-cypress-dependency.outputs.cache-hit != 'true'
+        run: npx cypress install
+      
+      - name: Run cypress tests
+        uses: cypress-io/github-action@v2
+        with:
+          install: false
+          command: npm run test:e2e
+          wait-on: http://localhost:3000
