Fix run_cypress command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,6 +138,12 @@ jobs:
       - name: Install dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
         run: npm i --ignore-scripts
+
+      - name: Install node-sass
+        run: node node_modules/node-sass/scripts/install.js
+      
+      - name: Rebuild node-sass
+        run: npm rebuild node-sass
       
       - name: Start server
         run: npm run start
