Continue running commands after starting test server

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,7 @@ jobs:
         run: npm rebuild node-sass
       
       - name: Start server
-        run: npm run start
+        run: npm run start &
       
       - name: Cache Cypress binary
         id: cache-cypress-dependency
