--- a/package.json
+++ b/package.json
@@ -3,12 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/react-hooks": "^7.0.2",
     "axios": "^0.21.1",
-    "axios-mock-adapter": "^1.20.0",
-    "cypress": "^9.2.0",
-    "history": "^5.2.0",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.1",
@@ -17,6 +12,13 @@
     "react-scripts": "^5.0.0",
     "styled-components": "^5.2.1",
     "use-debounce": "^7.0.1"
+  },
+  "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "axios-mock-adapter": "^1.20.0",
+    "cypress": "^9.2.0",
+    "history": "^5.2.0"
   },
   "scripts": {
     "test": "react-scripts test",
